--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Index.cshtml
@@ -10,6 +10,6 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_puntoventa", new { IdSucursal = ViewBag.IdSucursal, IdBodega = ViewBag.IdBodega })
+    @Html.Action("GridViewPartial_puntoventa")
     
 }
