--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Cliente";
+    ViewBag.Title = "Tipo cliente";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
