--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
@@ -10,8 +10,9 @@
 
 @using (Html.BeginForm("Nuevo", "PuntoVenta", FormMethod.Post, new { @class = "form", @rolw = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
-    
+
+    @Html.HiddenFor(q => q.IdEmpresa
+    @Html.HiddenFor(q => q.IdPuntoVta)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -61,7 +62,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "PuntoVenta", new {IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega, Area = "Facturacion" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "PuntoVenta", new { Area = "Facturacion" }, null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
