--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Modificar.cshtml
@@ -33,7 +33,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="Ve_Vendedor">Nombre del vendedor</label>
+                    <label for="Ve_Vendedor">Nombre del vendedor*</label>
                     @Html.TextBoxFor(q => q.Ve_Vendedor, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Ve_Vendedor, "", new { @class = "text-danger" })
                 </div>
