nuevos cambios de recepcion dd mercancias

--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Modificar.cshtml
@@ -1,11 +1,19 @@
 ﻿@model Core.Erp.Info.Importacion.imp_ordencompra_ext_Info
 @{
     ViewBag.Title = "Nueva orden compra al exterior";
-    //if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
-    //{
-    //    Response.Redirect("~/Account/Login");
-    //}
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
 }
 @using (Html.BeginForm("Modificar", "OrdenCompraExterior", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
