--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Anular.cshtml
@@ -8,7 +8,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Anular", "OrdenCompraExterior", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
+{@Html.HiddenFor(q => q.IdOrdenCompra_ext)
+    @Html.HiddenFor(q => q.IdEmpresa)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -250,7 +252,6 @@
             </div>
         </div>
     </div>
-
 
 
 <div class="box-footer">
