--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Nuevo.cshtml
@@ -1,11 +1,20 @@
 ﻿@model Core.Erp.Info.Importacion.imp_ordencompra_ext_Info
 @{
     ViewBag.Title = "Nueva orden compra al exterior";
-    //if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
-    //{
-    //    Response.Redirect("~/Account/Login");
-    //}
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
 }
 @using (Html.BeginForm("Nuevo", "OrdenCompraExterior", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
@@ -21,13 +30,13 @@
                     @Html.ValidationMessageFor(q => q.oe_codigo, "", new { @class = "text-danger" })
                 </div>
             </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="rub_grupo">Tipo de embarque*</label>
-                            @Html.DropDownListFor(q => q.IdCatalogo_via, new SelectList(ViewBag.lst_catalogos, "IdCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.IdCatalogo_via, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="rub_grupo">Tipo de embarque*</label>
+                    @Html.DropDownListFor(q => q.IdCatalogo_via, new SelectList(ViewBag.lst_catalogos, "IdCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdCatalogo_via, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-offset-10 col-med-2">
                 <div class="form-group">
                     <label for="">Fecha O.C</label>
@@ -124,8 +133,8 @@
             <li>
                 <a href="#tab_otros" aria-controls="otros" role="tab" data-toggle="tab">Datos adicionales</a>
             </li>
-           
-           
+
+
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_detalle">
@@ -222,12 +231,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <<div class="col-md-6">
-                        <div class="form-group">
-                            <label for="rub_grupo">Forma de pago*</label>
-                            @Html.DropDownListFor(q => q.IdCatalogo_forma_pago, new SelectList(ViewBag.lst_forma_pago, "IdCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.IdCatalogo_forma_pago, "", new { @class = "text-danger" })
+                            <div class="form-group">
+                                <label for="rub_grupo">Forma de pago*</label>
+                                @Html.DropDownListFor(q => q.IdCatalogo_forma_pago, new SelectList(ViewBag.lst_forma_pago, "IdCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.IdCatalogo_forma_pago, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
 
