--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/Index.cshtml
@@ -62,6 +62,21 @@
         </div>
     </div>
 
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_importacion">Cuenta contable*</label>
+                    @Html.Partial("_CmbCuenta_contable", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
+                </div>
+            </div>
+           
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
