--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable.cshtml
@@ -2,11 +2,11 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdCtaCble_importacion";
+        settings.Name = "IdCtaCble";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "OrdenCompraExterior", Action = "CmbCuenta_cta_contable", Area = "Importacion" };
+        settings.CallbackRouteValues = new { Controller = "ParametrosImportacion", Action = "CmbCuenta_cta_contable", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pc_Cuenta";
@@ -18,8 +18,7 @@
     })
     .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.ParametrosImportacionController().get_list_bajo_demanda_cta, new Core.Erp.Web.Areas.Importacion.Controllers.ParametrosImportacionController().get_info_bajo_demanda_cta)
 
-
-    .Bind(Model.IdCtaCble_importacion);
+    .Bind(Model.IdCtaCble);
 
 }
 @comboBox.GetHtml()
